--- a/TPBase/Views/Home/ComprarConcierto.cshtml
+++ b/TPBase/Views/Home/ComprarConcierto.cshtml
@@ -61,3 +61,4 @@
         crossorigin="anonymous"></script>
 
 </body>
+        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
