--- a/TPBase/Views/Home/Index.cshtml
+++ b/TPBase/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
 @{
     ViewData["Title"] = "Home Page";
 }
+        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+
  <!-- carrousel -->
 
     
@@ -31,7 +33,7 @@
     </button>
     </div>
      <!-- cerrar carrousel -->
-  <a class="CS" href='@Url.Action("Index","Home")'>Cerrar Sesion</a>
+ 
 
     <div class="row">
         @{
