--- a/TPBase/Views/Shared/_Layout.cshtml
+++ b/TPBase/Views/Shared/_Layout.cshtml
@@ -4,9 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>@ViewData["Title"] </title>
-        
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+        <link  href="~/Shared/_Layout.cshtml.css" rel="stylesheet"asp-append-version="true" />
     </head>
     <body>
         <header>
@@ -18,6 +17,7 @@
                      </a>
                 </div>
                 <a href='@Url.Action("VerHistorial","Home")'>Historial</a>
+                 <a class="sesion" href='@Url.Action("Index","Home")'><p>Cerrar Sesion</p></a>
             </nav>
         </header>
         
