--- a/TPBase/Views/Shared/_Layout.cshtml.css
+++ b/TPBase/Views/Shared/_Layout.cshtml.css
@@ -1,48 +1,27 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+﻿/* Estilos para el header */
+header {
+  background-color: #000; /* Color de fondo del header */
+  padding: 10px; /* Espaciado interno del header */
 }
 
-a {
-  color: #0077cc;
+/* Estilos para el logo y la marca */
+.navbar-brand {
+  display: flex; /* Flexbox para alinear los elementos horizontalmente */
+  align-items: middle; /* Centra verticalmente los elementos */
+  text-decoration: none; /* Quita la decoración de texto */
+  color: white; /* Color del texto */
+  font-weight: bold; /* Fuente en negrita */
 }
 
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+/* Estilos para el enlace de sesión */
+.sesion {
+  text-decoration: none; /* Quita la decoración de texto */
+  color: #ffffff; /* Color del enlace */
 }
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px;
+/* Estilos para el footer */
+footer {
+  background-color: #343a40; /* Color de fondo del footer */
+  color: #fff; /* Color del texto del footer */
+  padding: 10px; /* Espaciado interno del footer */
 }
