--- a/TPBase/Views/Home/HistorialCompras.cshtml
+++ b/TPBase/Views/Home/HistorialCompras.cshtml
@@ -20,3 +20,6 @@
     </tbody>
 </table>
         <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+   <footer>
+                <p class="footer">Hecho por: Ariana Castro, Agustina Potasman, Lola Vazquez y Sasha Vilamowski</p> 
+        </footer>
