--- a/TPBase/Views/Home/Index.cshtml
+++ b/TPBase/Views/Home/Index.cshtml
@@ -63,6 +63,9 @@
         }
 
     </div>
+    <footer>
+                <p class="footer">Hecho por: Ariana Castro, Agustina Potasman, Lola Vazquez y Sasha Vilamowski</p> 
+        </footer>
     <!-- Modal -->
 
     <div class="modal fade" id="Modalconcierto" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -102,3 +105,4 @@ function ShowModal(idConcierto)
     document.getElementById("comprarButton").href = `/Home/ComprarConcierto?idConcierto=${idConcierto}`;
 }
 </script>
+        
