--- a/TPBase/Views/Home/IniciarSesion.cshtml
+++ b/TPBase/Views/Home/IniciarSesion.cshtml
@@ -24,3 +24,6 @@
     }
 </div>
         <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+   <footer>
+                <p class="footer">Hecho por: Ariana Castro, Agustina Potasman, Lola Vazquez y Sasha Vilamowski</p> 
+        </footer>
