--- a/TPBase/Views/Home/Registrarse.cshtml
+++ b/TPBase/Views/Home/Registrarse.cshtml
@@ -19,3 +19,6 @@
     }
 </div>
         <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+   <footer>
+                <p class="footer">Hecho por: Ariana Castro, Agustina Potasman, Lola Vazquez y Sasha Vilamowski</p> 
+        </footer>
