--- a/TPBase/Views/Shared/_Layout.cshtml
+++ b/TPBase/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>@ViewData["Title"] </title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link  href="~/Shared/_Layout.cshtml.css" rel="stylesheet"asp-append-version="true" />
+        <link  href="~/Shared/site.css" rel="stylesheet"asp-append-version="true" />
     </head>
     <body>
         <header>
@@ -16,7 +16,7 @@
                     WorldConcerts
                      </a>
                 </div>
-                <a href='@Url.Action("VerHistorial","Home")'>Historial</a>
+                <a  class="hist" href='@Url.Action("VerHistorial","Home")'>Historial</a>
                  <a class="sesion" href='@Url.Action("Index","Home")'><p>Cerrar Sesion</p></a>
             </nav>
         </header>
@@ -24,9 +24,7 @@
         <div style="padding:20px 10px 0px 10px;">
             @RenderBody()
         </div>
-        <footer>
-                <p>Hecho por: Ariana Castro, Agustina Potasman, Lola Vazquez y Sasha Vilamowski</p> 
-        </footer>
+
         <script src="~/js/site.js" asp-append-version="true"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
