--- a/TPBase/Views/Shared/_Layout.cshtml.css
+++ b/TPBase/Views/Shared/_Layout.cshtml.css
@@ -1,27 +1,1 @@
-﻿/* Estilos para el header */
-header {
-  background-color: #000; /* Color de fondo del header */
-  padding: 10px; /* Espaciado interno del header */
-}
-
-/* Estilos para el logo y la marca */
-.navbar-brand {
-  display: flex; /* Flexbox para alinear los elementos horizontalmente */
-  align-items: middle; /* Centra verticalmente los elementos */
-  text-decoration: none; /* Quita la decoración de texto */
-  color: white; /* Color del texto */
-  font-weight: bold; /* Fuente en negrita */
-}
-
-/* Estilos para el enlace de sesión */
-.sesion {
-  text-decoration: none; /* Quita la decoración de texto */
-  color: #ffffff; /* Color del enlace */
-}
-
-/* Estilos para el footer */
-footer {
-  background-color: #343a40; /* Color de fondo del footer */
-  color: #fff; /* Color del texto del footer */
-  padding: 10px; /* Espaciado interno del footer */
-}
+﻿
