--- a/TPBase/wwwroot/css/site.css
+++ b/TPBase/wwwroot/css/site.css
@@ -285,3 +285,38 @@ width: 300px;
 }
 
 
+/* Estilos para el header */
+header {
+  background-color: #000; /* Color de fondo del header */
+  padding: 10px; /* Espaciado interno del header */
+}
+
+/* Estilos para el logo y la marca */
+.navbar-brand {
+ /* Centra verticalmente los elementos */
+  text-decoration: none; /* Quita la decoración de texto */
+  color: white; /* Color del texto */
+  font-weight: bold; /* Fuente en negrita */
+}
+
+/* Estilos para el enlace de sesión */
+.sesion {
+  text-decoration: none; /* Quita la decoración de texto */
+  color: #ffffff; /* Color del enlace */
+
+}
+nav{
+  display: flex; /* Flexbox para alinear los elementos horizontalmente */
+  align-items: middle;
+  justify-content: space-between;
+}
+.hist{
+  color: white;
+  text-decoration: none;
+}
+/* Estilos para el footer */
+.footer{
+  display: flex;
+  justify-content: bottom;
+ align-self:center;
+}
